@@ -1,3 +1,12 @@
+2026-02-06T01:42:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21735523754 # 869
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-06
+* notice: last 14d: unq all: 0 0
+* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
+* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-05T01:49:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21695618237 # 868
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-05
